# ZorakBot---Legacy

./: .gitignore  BotFuncs.py  README.md  gitignore.txt  keep_alive.py  main.py  pyproject.toml
1_text_rescources/: Discord rescorces 2.txt  Discord rescorces.txt  Discord rules.txt
2_Challenges/Python daily challenge - Day 10/: Question.txt
2_Challenges/Python daily challenge - Day 11/: Question.txt
2_Challenges/Python daily challenge - Day 12/: Question.txt
2_Challenges/Python daily challenge - Day 13/: Question.txt
2_Challenges/Python daily challenge - Day 14/: Question.txt
2_Challenges/Python daily challenge - Day 15/: Question.txt
2_Challenges/Python daily challenge - Day 16/: Question.txt
2_Challenges/Python daily challenge - Day 17/: Question.txt
2_Challenges/Python daily challenge - Day 18/: Question.txt
2_Challenges/Python daily challenge - Day 19/: Question.txt
2_Challenges/Python daily challenge - Day 20/: Question.txt
2_Challenges/Python daily challenge - Day 21/: Question.txt
2_Challenges/Python daily challenge - Day 22/: Question.txt
2_Challenges/Python daily challenge - Day 23/: Question.txt
2_Challenges/Python daily challenge - Day 24/: Question.txt
2_Challenges/Python daily challenge - Day 25/: Question.txt
2_Challenges/Python daily challenge - Day 26/: Question.txt
2_Challenges/Python daily challenge - Day 27/: Question.txt
2_Challenges/Python daily challenge - Day 28/: Question.txt
2_Challenges/Python daily challenge - Day 29/: Question.txt
2_Challenges/Python daily challenge - Day 3/: Attempt.py  Question.txt
(+9 files in other folders)
