[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "A Bot for the Practical Python Discord server."
authors = ["Xarlos"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
discord = "^1.7.3"
requests = "^2.27.1"
inflect = "^5.4.0"
Flask = "^2.0.3"
discord-interactions = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"